forgot password feature and search page para wrap bug

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -48,3 +48,7 @@ body {
 #login-form .form-group {
     margin-bottom: 5px;
 }
+
+p {
+    word-wrap: break-word;
+}
